--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 软件/MagicaVoxel-0.99.2-alpha-win64/export/castle.obj
 软件/MagicaVoxel-0.99.2-alpha-win64/export/castle.mtl
 软件/MagicaVoxel-0.99.2-alpha-win64/export/basket.gcode
+psd2cocos/nodejs_about/tips.psd
